Add user register and login endpoints
