# src/main/kotlin/com/ivansuvorov/secretstash/service/model/UserRegisterRequestDto.kt
@@ -1,0 +1,6 @@
+package com.ivansuvorov.secretstash.service.model
+
+data class UserRegisterRequestDto(
+    val email: String,
+    val password: String
+)
